# WoBToolbox

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  readme.md  visualize.py
apps/: boundary_estimate.cu  general_2d.cu  general_3d.cu  poisson_equation.cu  potential_flow_with_vpl.cu  simple_wob_and_wos.cu
data/: config_boundary_estimate.json  config_general_2d_exterior_Dirichlet.json  config_general_2d_exterior_Mixed.json  config_general_2d_exterior_Neumann.json  config_general_2d_exterior_Robin.json  config_general_2d_interior_Dirichlet.json  config_general_2d_interior_Mixed.json  config_general_2d_interior_Neumann.json  config_general_2d_interior_Robin.json  config_general_3d_exterior_Dirichlet.json  config_general_3d_exterior_Mixed.json  config_general_3d_exterior_Neumann.json  config_general_3d_exterior_Robin.json  config_general_3d_interior_Dirichlet.json  config_general_3d_interior_Mixed.json  config_general_3d_interior_Neumann.json  config_general_3d_interior_Robin.json  config_poisson_equation.json  config_potential_flow_with_vpl.json  config_simple_wob.json  config_simple_wos.json
wob/: wob.cuh
wob/wob/: bie_models.cuh  equation_kernel.cuh  estimator.cuh  points.hpp  runtime_utils.cuh  scene.cuh  utils.cuh
